# ChunkVault-Lite

./: .gitignore  .spaceignore  Discovery.md  README.md  Spacefile  teller.toml
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend-v2/: main.py  pyproject.toml  requirements.txt
backend-v2/application/: __init__.py
backend-v2/application/crud/: snapshot.py
backend-v2/application/routes/: __init__.py  snapshot.py  world.py
backend-v2/application/utils/: __init__.py  config.py  connections.py
backend/application/: __init__.py
backend/application/crud/: actions.py  public.py  snapshot.py  world.py
backend/application/routes/: __init__.py  actions.py  public.py  snapshot.py  world.py
backend/application/routes/snapshots/: __init__.py
backend/application/routes/worlds/: __init__.py
backend/application/schemas/: sessions.py  snapshot.py  world.py  worlds.py
backend/application/utils/: __init__.py  config.py  connections.py  databases.py
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
frontend/src/: app.html  app.postcss
frontend/src/components/: ConfirmationDialog.svelte  EditModal.svelte  Modal.svelte  SnapshotItem.svelte  SoloSnapshotItem.svelte  WorldList.svelte  WorldListItem.svelte  WorldSnapshotList.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/get-domain/: +server.ts
frontend/src/routes/snapshots/: +page.svelte  +page.ts
frontend/src/utils/: reusables.ts  schemas.ts  snapshotStore.ts  worldStore.ts
(+6 files in other folders)
